Quick fix for spacing

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ ul{
 	border: 2px solid #e9e3ea;
 	border-radius: 20px;
 	margin-top: -33px;
-	margin-left: 66%;
+	margin-left: 69%;
 	background-image: url('img/search.png');
 	background-position: 186px 5px; 
     background-repeat: no-repeat;
@@ -88,7 +88,7 @@ ul{
 	float: left;
 	border-radius: 50%;
 	margin-top: -32px;
-	margin-left: 2%;
+	margin-left: 85%;
 }
 .accLogo:hover{
 	cursor: pointer;
@@ -497,7 +497,7 @@ ul{
 .g-10{
 	width: 6%;
 	float: left;
-	margin-left: 6.5%;
+	margin-left: 89%;
 	margin-top: -34px;
 }
 
